fix: fix marquee components zindex

--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -2,7 +2,7 @@
 import { TECHNOLOGIES } from '../constants';
 ---
 
-<nav class="fixed top-0 inset-x-0 w-full h-14 bg-black text-primary border-4 border-primary border-x-0 border-t-0 overflow-hidden py-3">
+<nav class="fixed top-0 inset-x-0 z-50 w-full h-14 bg-black text-primary border-4 border-primary border-x-0 border-t-0 overflow-hidden py-3">
     <div class="flex animate-marquee whitespace-nowrap w-max">
         {Array.from({ length: 12 }).map((_, i) => (
             <span class="text-md lg:text-lg uppercase font-bold font-space-mono px-2 antialiased shrink-0">
